--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ad-authenticator</groupId>
     <artifactId>ad-authenticator-sonar-plugin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>sonar-plugin</packaging>
     <name>AD Authenticator</name>
     <description>A Sonar Plugin for authenticating a user against Active Directory and then retrieving their user details.</description>
@@ -21,7 +20,7 @@
         </license>
     </licenses>
     <scm>
-        <tag>HEAD</tag>
+        <tag>ad-authenticator-sonar-plugin-1.0.0</tag>
         <url>https://github.com/klyall/ad-authenticator-sonar-plugin</url>
         <connection>scm:git:git@github.com:klyall/ad-authenticator-sonar-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:klyall/ad-authenticator-sonar-plugin.git</developerConnection>
